# korteweg-de_vries

./: README.md  kdv_three_solitons.avi  kdv_two_solitons.avi
code/: Korgi.c  Makefile.am  RKfour.c  configure.ac  linear_algebra.h  spatial_finite_difference.c  vector.c  vector_add.c
